[package]
name = "quizzy"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/frectonz/quizzy"
description = "A configurable quiz app with a libSQL backend."
authors = ["frectonz"]

[dependencies]
bytes = "1.6.1"
clap = { version = "4.5.9", features = ["derive", "env"] }
color-eyre = "0.6.3"
futures = "0.3.30"
include_dir = "0.7.4"
libsql = { git = "https://github.com/tursodatabase/libsql.git", features = ["remote"] }
maud = { version = "0.26.0", features = ["warp"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ulid = "1.1.3"
warp = "0.3.7"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.18.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true

